fixed wording of circuits vs buttons

--- a/Flic2MQTT.config.sample
+++ b/Flic2MQTT.config.sample
@@ -3,7 +3,7 @@
 #
 LOGFILE=stdout
 #
-# Where is my mqtt server and what should the topic pattern be (will augment circuit name)
+# Where is my mqtt server and what should the topic pattern be (will augment button name)
 #
 MQTT_SERVER=192.168.100.250
 MQTT_TOPIC_BASE=/flic2mqtt
